source/css/style.css
body {
    padding: 0;
    margin: 0;
    background: #FFF;
    color: #000;
}

p{
    margin: 25px 0 25px
}

a {
    color: dodgerblue;
}

.remove-margin {
    margin: 0;
}

.remove-padding {
    padding: 0;
}

.icon-list {
    width: 245px;
    background: none;
}

h1 {
    font-size: 70px;
    padding-top: 36px;
}

h1 span{
    display: block;
    font-size: 20px;
    color: #CCC;
}

/* Menu */
.nav{
    list-style: none;
    padding: 0;
}

.nav a{
    text-decoration: none;
}

.nav li{
    padding-top: 5px;
    padding-bottom: 5px;
}

/* Container content */
.row-fluid{
    width: 90% !important;
    margin: 0 auto;
}

/* Intro */
.intro {
    text-align: center;
}

/* Main structure */

.content-wrap {
    width: 960px;
    margin: 0 auto;
    background: #FFF;
}

.top {
    margin:0 auto;
    margin-left: 11%;
}

.main-navigator {
    text-align: center
}

.main-navigator a{
    color: #FFFFFF;
    font-size: 20px;
    padding-top: 3px;
    padding-bottom: 3px;
}

.main-navigator a:hover{
    background-color: #0297AF;
    color: #000000;
}

/* Abstracts */
.clear {
    clear: both;
}

.left {
    float: left;
}

.right {
    float: right;
}

.item {
    width: 50%;
    padding: 1.5%;
    float: left;
}

.top30 {
    margin-top: 30px;
}

.text-center {
    text-align: center;
}

.item:hover{
    background: #f1f1f1;
}

.item .links div{
    width: 25%;
    font-size: 12px;
    float: left;
}

.align-center{
    border-bottom: 1px dashed #AAA;
    text-align: center;
    padding-bottom: 20px;
}

.logo{
    text-align: center;
}

.logo img{
    padding-top: 100px;
    margin: 0 auto;
}

p.description{
    font-family: 'Times New Roman';
    font-style: italic;
    font-size: 20px;
    padding-top: 20px
}

article{
    padding-top: 30px;
    padding-bottom: 30px;
    border-bottom: 1px dashed #AAA;
    max-width: 700px;
}
article h2 a{
    text-decoration: none;
    color: #328CFF
}

h4 small
{
    display: block;
    font-size: 60%;
    color: #888;
}

footer.container {
    max-width: 900px;
}

footer.container {
    margin-top: 30px;
    padding: 30px 0;
    border-top: 1px dashed #aaa;
}

@media (max-width: 767px) {
    .item {
        width: 97%;
        padding: 1.5%;
        float: left;
    }
}
@media (min-width: 980px) {
    body {
        /*padding-top: 60px; *//* 60px to make the container go all the way to the bottom of the topbar */
        /*padding-bottom: 40px;*/
    }
}

pre code {
    background-color: inherit;
}

.logo-cont {
    height: 100px;
}
.logo-cont canvas {
    z-index: 2;
    pointer-events: none;
    background: transparent;
}

.ocramius, .twitter, .github, .roave, .zendframework, .doctrine {
    padding-left: 1.5em;
    background-repeat: no-repeat;
    background-position: left;
    background-size: contain;
}

.social-media{
    padding-left: 31%;
}

.social-media a{
    float: left;
    width: 3%;
    list-style: none;
}

.ocramius {
    background-image: url('../img/marco-pivetta-ocramius.gif');
}

.twitter {
    background-image: url('../img/twitter.svg');
}

.github {
    background-image: url('../img/github.svg');
}

.roave {
    background-image: url('../img/roave.svg');
}

.zendframework {
    background-image: url('../img/zendframework.png');
    padding-left: 2.5em;
}

.doctrine {
    background-image: url('../img/doctrine.svg');
    padding-left: 1.2em;
}

.sidebar a.github, .sidebar a.twitter, .sidebar a.github:hover, .sidebar a.twitter:hover {
    color: rgba(0, 0, 0, 0);
    background-position: center;
}

